@@ -1,3 +1,7 @@
+November 2021
+
+If no option, just show info for filename.
+
 July 2021
 
 Added lrzip-next version 0.8 support with new magic header.
